// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttom component Snapshot renders a anchor tag 1`] = `
<a
  className="button"
  href="/something"
  onClick={[Function]}
>
  Click Me
</a>
`;

exports[`Buttom component Snapshot renders a primary button 1`] = `
<button
  className="button"
  type="button"
>
  Click Me
</button>
`;

exports[`Buttom component Snapshot renders a secondary button 1`] = `
<button
  className="button button-secondary"
  type="button"
>
  Click Me
</button>
`;
